[gd_scene load_steps=15 format=3 uid="uid://c2t3msqfsn3h5"]

[ext_resource type="Script" path="res://StartMenuFolder/start_menu.gd" id="1_05833"]
[ext_resource type="Texture2D" uid="uid://bgybj57bwbas3" path="res://StartMenuFolder/proper_backgroundnot_jank.png" id="2_n5plt"]
[ext_resource type="PackedScene" uid="uid://bq6rvvboxq0fm" path="res://play_button.tscn" id="3_0jv1n"]
[ext_resource type="Texture2D" uid="uid://c8fyklcm7dohp" path="res://StartMenuFolder/ButtonArt/QuitIdle.png" id="4_5uu2l"]
[ext_resource type="Texture2D" uid="uid://re8ewadtjoeo" path="res://StartMenuFolder/ButtonArt/QuitPressed.png" id="5_ijlls"]
[ext_resource type="Texture2D" uid="uid://c827mjcx0s2ax" path="res://StartMenuFolder/ButtonArt/QuitHover.png" id="6_4u1bw"]
[ext_resource type="Texture2D" uid="uid://ce0dif04tnkiq" path="res://StartMenuFolder/MiniLogo.png" id="7_hbpp4"]
[ext_resource type="Texture2D" uid="uid://w5w7mlhkwl1o" path="res://StartMenuFolder/ButtonArt/SettingsIdle.png" id="8_hxs6x"]
[ext_resource type="Texture2D" uid="uid://bnfbxs1wmk6d6" path="res://StartMenuFolder/ButtonArt/SettingsPressed.png" id="9_fd38t"]
[ext_resource type="Texture2D" uid="uid://bjaymy37u46d" path="res://StartMenuFolder/ButtonArt/SettingsHover.png" id="10_7cj4h"]
[ext_resource type="FontFile" uid="uid://bk0y33hgchkrb" path="res://theme/fonts/hartone_softed.ttf" id="11_npvos"]

[sub_resource type="LabelSettings" id="LabelSettings_18bks"]
font = ExtResource("11_npvos")
font_size = 40
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_4xhwr"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 2, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0g6v"]
_data = {
"pulse": SubResource("Animation_4xhwr")
}

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_05833")

[node name="ProperBackgroundnotJank" type="Sprite2D" parent="."]
position = Vector2(513, 850)
scale = Vector2(1.03955, 1.03955)
texture = ExtResource("2_n5plt")

[node name="PlayButtonOld" type="Button" parent="."]
visible = false
offset_left = 314.0
offset_top = 299.0
offset_right = 670.0
offset_bottom = 372.0
text = "Play
"

[node name="QuitButtonOld" type="Button" parent="."]
visible = false
offset_left = 315.0
offset_top = 427.0
offset_right = 671.0
offset_bottom = 500.0
text = "Quit
"

[node name="MiniLogo" type="Sprite2D" parent="."]
position = Vector2(480, 149)
scale = Vector2(1.372, 1.372)
texture = ExtResource("7_hbpp4")

[node name="All Buttons" type="Node" parent="."]

[node name="PlayButton" parent="All Buttons" instance=ExtResource("3_0jv1n")]
offset_left = 352.0
offset_top = 300.0
offset_right = 608.0
offset_bottom = 364.0

[node name="SettingsButton" type="TextureButton" parent="All Buttons"]
offset_left = 352.0
offset_top = 380.0
offset_right = 608.0
offset_bottom = 444.0
texture_normal = ExtResource("8_hxs6x")
texture_pressed = ExtResource("9_fd38t")
texture_hover = ExtResource("10_7cj4h")

[node name="QuitButton" parent="All Buttons" instance=ExtResource("3_0jv1n")]
offset_left = 352.0
offset_top = 460.0
offset_right = 608.0
offset_bottom = 524.0
texture_normal = ExtResource("4_5uu2l")
texture_pressed = ExtResource("5_ijlls")
texture_hover = ExtResource("6_4u1bw")

[node name="Label" type="Label" parent="."]
offset_left = 571.0
offset_top = 500.0
offset_right = 933.0
offset_bottom = 543.0
rotation = -0.523599
scale = Vector2(1.02345, 1.02345)
pivot_offset = Vector2(181, 0)
text = "FULLSCREEN RECOMMENDED"
label_settings = SubResource("LabelSettings_18bks")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_b0g6v")
}

[connection signal="pressed" from="PlayButtonOld" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButtonOld" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="All Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="All Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
